[project]
name = "trustllm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>-2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.26",
    "sqlmodel>=0.0.16",
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "streamlit>=1.42",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ['E', 'F', 'I', 'B', 'UP', 'N', 'S']
ignore = ['S101'] 

[tool.mypy]
python_version = '3.11'
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ['gateway_api/tests']
